--- a/Pipeline (09-09-25).ipynb
+++ b/Pipeline (09-09-25).ipynb
@@ -126,7 +126,7 @@
    "source": [
     "#Upload Data Set\n",
     "path = \"D:/data/irrigaciones\"\n",
-    "file = \"/nss chg data 4W under\"\n",
+    "file = \"/nss chg dataset\"\n",
     "extension = \".csv\"\n",
     "df=pd.read_csv(path + file + extension)"
    ]
